Add descriptions to docker ENV vars

--- a/docker/config-example.env
+++ b/docker/config-example.env
@@ -1,8 +1,8 @@
-TFA_CONSUMER_KEY=
-TFA_CONSUMER_SECRET=
-TFA_ACCESS_TOKEN=
-TFA_ACCESS_TOKEN_SECRET=
-TFA_USERNAME=
+TFA_CONSUMER_KEY=<your_twitter_app_consumer_api_key>
+TFA_CONSUMER_SECRET=<your_twitter_app_consumer_api_secret_key>
+TFA_ACCESS_TOKEN=<your_twitter_app_access_token>
+TFA_ACCESS_TOKEN_SECRET=<your_twitter_app_access_token_secret>
+TFA_USERNAME=<your_twitter_username>
 CRON_SCHEDULE=* * * * *
 TZ=America/Los_Angeles
 PUID=1000
