Support passing the number of favorites to fetch

--- a/docker/config-example.env
+++ b/docker/config-example.env
@@ -3,5 +3,6 @@ TFA_CONSUMER_SECRET=<your_twitter_app_consumer_api_secret_key>
 TFA_ACCESS_TOKEN=<your_twitter_app_access_token>
 TFA_ACCESS_TOKEN_SECRET=<your_twitter_app_access_token_secret>
 TFA_USERNAME=<your_twitter_username>
-CRON_SCHEDULE=* * * * *
+CRON_SCHEDULE=* 0 30 2 *
+FAVORITES_NUMBER_TO_FETCH=20
 TZ=America/Los_Angeles
